--- a/dashboard.html
+++ b/dashboard.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta property="og:image" content="https://cisaonlinereport.onrender.com/css/images/Seal_of_Cybersecurity_and_Infrastructure_Security_Agency.svg">
+  <meta property="og:image:width" content="1200"> <!-- Specify the width of the image -->
+  <meta property="og:image:height" content="630">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/dashboard.css">
   <title>CISA/Report/Dashboard</title>
