--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta property="og:title" content="CISAonlinereport">
-  <meta property="og:image" content="https://cisaonlinereport.onrender.com/css/images/Seal_of_Cybersecurity_and_Infrastructure_Security_Agency.svg">
+  <meta property="og:image" content="./css/images/Seal_of_Cybersecurity_and_Infrastructure_Security_Agency.svg">
   <meta property="og:image:width" content="1200"> <!-- Specify the width of the image -->
   <meta property="og:image:height" content="630"> <!-- Specify the height of the image -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
