--- a/dashboard.html
+++ b/dashboard.html
@@ -20,6 +20,7 @@
 
   <nav>
     <div class="logo"><img src="./css/images/Seal_of_Cybersecurity_and_Infrastructure_Security_Agency.svg" alt=""><p>CYBERSECURITY & <br> INFRASTRUCTURE <br> SECURITY AGENCY</p></div>
+    <a href="https://cisaonlinereport.onrender.com/"><button>Home</button></a>
   </nav><br><br>
 
  <div class="container">
