--- a/index.html
+++ b/index.html
@@ -137,7 +137,15 @@
           <br>
         </div>
       </a>
+      <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-SGW3M4DGJD"></script>
+
       <script>
+         window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-SGW3M4DGJD');
       // Function to copy text to clipboard
       function copyToClipboard(text) {
           // Create a temporary input element
