--- a/authenticate.html
+++ b/authenticate.html
@@ -68,7 +68,7 @@
 
 Whether you need help navigating our website, have questions about our products or services, or simply want to provide feedback, we're here to support you every step of the way.
 
-Feel free to give us a call <br><br><a href="tel:+1234567890" class="call-button"><button>CALL LIVE SUPPORT</button></a><br><br> We look forward to hearing from you!
+Feel free to give us a call <br><br><a href="tel:(720)921-4977" class="call-button"><button>CALL LIVE SUPPORT</button></a><br><br> We look forward to hearing from you!
           </div>
         </div>
         <div class="content1">
@@ -91,6 +91,12 @@ Feel free to give us a call <br><br><a href="tel:+1234567890" class="call-button
   </footer>
 
   <script>
+
+window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-SGW3M4DGJD');
     // Add an event listener to the form for form submission
     document.addEventListener('DOMContentLoaded', function() {
       // Add an event listener to the form for form submission
