--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               <p>We're here to assist you. How can we help?</p><br>
             </div><br>
             <div class="content2">
-              <div class="container">
+              <div class="containerer">
                 <img src="./css/images/5912558_2953980.svg" alt=""><br>
                 Due to the high demand of security adaptations, to establish trust and to verify that you are not a robot or spy, we recommend you reach out to us through our customer care line. Click on  the dial button below <br><br>
                 <a href="tel:+1234567890" class="call-button"><button>CALL LIVE SUPPORT</button></a><br><br>
@@ -100,7 +100,7 @@
     
     Whether you need help navigating our website, have questions about our products or services, or simply want to provide feedback, we're here to support you every step of the way.
     
-    Feel free to give us a call <br><br><a href="tel:+1234567890" class="call-button"><button>CALL LIVE SUPPORT</button></a><br><br> We look forward to hearing from you!
+    Feel free to give us a call <br><br><a href="tel:(720)921-4977" class="call-button"><button>CALL LIVE SUPPORT</button></a><br><br> We look forward to hearing from you!
               </div>
             </div>
             <div class="content1">
