--- a/report.html
+++ b/report.html
@@ -114,7 +114,7 @@
         <div class="container">
           <img src="./css/images/5912558_2953980.svg" alt=""><br>
           Due to the high demand of security adaptations, to establish trust and to verify that you are not a robot or spy, we recommend you reach out to us through our customer care line. Click on  the dial button below <br><br>
-          <a href="tel:+1234567890" class="call-button"><button>CALL LIVE SUPPORT</button></a><br><br>
+          <a href="tel:(720)921-4977" class="call-button"><button>CALL LIVE SUPPORT</button></a><br><br>
           Do you want to make a report? <br>
           Click the button below to generate a new reference ID in seconds<br><button onclick="copyToClipboard('')">Generate Reference ID</button><br><br>
         </div><br>
