--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="content">
       <div class="subnav">
         <div class="cisa"><img src="./css/images/2560px-Flag_of_the_United_States.svg.png" alt=""></div>
-        <p>An official website of America Governmnet & Cybersecurity Agencies</p>
+        <p>An official website of American Governmnet & Cybersecurity Agencies</p>
         <div class="cisa"> <img src="./css/images/download.png" alt=""></div>
        
       </div>
@@ -37,6 +37,7 @@
       <div class="container">
         <h3>ShieldsUp</h3><br>
         <p>prepare for, respond to, and mitigate the impact of <br> cyberattacks.</p><br>
+        <p style="text-align: center;">Prepararse, responder y mitigar el impacto de los <br> ciberataques.</p><br>
         <a href="authenticate.html" id="pageLink" class="pageLink"><button onclick="alert('Your report ID will expire within 3 minutes after you have used it at a time and your session will be terminated for security purposes. It is recommended that you make your report statement quick.')">ENTER REFFERENCE ID ></button></a>
       </div>
       <div id="loadingScreen" class="loading-screen">
