--- a/authenticate.html
+++ b/authenticate.html
@@ -15,7 +15,8 @@
 <body>
   <div class="subnav">
     <div class="cisa"><img src="./css/images/2560px-Flag_of_the_United_States.svg.png" alt=""></div>
-    <p>An official website of the United States </p>
+    <p>An official website of American Governmnet & Cybersecurity Agencies</p>
+    <div class="cisa"> <img src="./css/images/download.png" alt=""></div>
   </div>
 
   <nav>
