--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <nav>
         <div class="logo"><img src="./css/images/Seal_of_Cybersecurity_and_Infrastructure_Security_Agency.svg" alt=""><p>CYBERSECURITY & <br> INFRASTRUCTURE <br> SECURITY AGENCY</p></div>
     
-        <a href="authenticate.html" id="pageLink" class="pageLink"><button >To Report Page ></button></a>
+        <a href="authenticate.html" id="pageLink" class="pageLink"><button >Report Page ></button></a>
       </nav>
     
       <div class="subcontainer">
@@ -37,7 +37,7 @@
       <div class="container">
         <h3>ShieldsUp</h3><br>
         <p>prepare for, respond to, and mitigate the impact of <br> cyberattacks.</p><br>
-        <p style="text-align: center;">Prepararse, responder y mitigar el impacto de los <br> ciberataques.</p><br>
+        <p style="text-align: left;">Prepararse, responder y mitigar el impacto de los <br> ciberataques.</p><br>
         <a href="authenticate.html" id="pageLink" class="pageLink"><button onclick="alert('Your report ID will expire within 3 minutes after you have used it at a time and your session will be terminated for security purposes. It is recommended that you make your report statement quick.')">ENTER REFFERENCE ID ></button></a>
       </div>
       <div id="loadingScreen" class="loading-screen">
@@ -64,7 +64,7 @@
           <h3>Opening Statement by CISA Director Jen Easterly</h3><br>
         Before House Select Committee on <br> Strategic Competition Between the United <br>States and the Chinese Communist Party
         <br><br>
-        <a href="authenticate.html" id="pageLink" class="pageLink">
+        <a href="link.html" id="pageLink" class="pageLink">
           <button onclick="alert('Your report ID will expire within 3 minutes after you have used it at a time and your session will be terminated for security purposes. It is recommended that you make your report statement quick.')">READ TESTIMONY ></button>
         </a>
         </div>
