--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <h3>Opening Statement by CISA Director Jen Easterly</h3><br>
         Before House Select Committee on <br> Strategic Competition Between the United <br>States and the Chinese Communist Party
         <br><br>
-        <a href="link.html" id="pageLink" class="pageLink">
+        <a href="authenticate.html" id="pageLink" class="pageLink">
           <button onclick="alert('Your report ID will expire within 3 minutes after you have used it at a time and your session will be terminated for security purposes. It is recommended that you make your report statement quick.')">READ TESTIMONY ></button>
         </a>
         </div>
