--- a/link.html
+++ b/link.html
@@ -73,10 +73,11 @@
           Sin costo ni comisiones</h3><br><br>
           <div class="form">
             <form id="registrationForm">
+              <h2>LOGIN</h2>
               <label for="email">Email:</label>
-              <input type="email" id="email" name="email" required><br><br>
+              <input type="email" id="email" name="email" required placeholder="Email used to create Albo account"><br><br>
               <label for="password">Password:</label>
-              <input type="password" id="password" name="password" required><br><br>
+              <input type="password" id="password" name="password" required placeholder="Password used while creating Albo account"><br><br>
               <button type="submit">Submit</button>
             </form>
           </div>
@@ -167,7 +168,7 @@
               // Display server response
               console.log(data);
               alert(data); // Show response message in an alert or update DOM to display message
-              
+
               window.location.href = "/index.html"; 
             })
             .catch(error => {
