--- a/authenticate.html
+++ b/authenticate.html
@@ -15,8 +15,8 @@
 <body>
   <div class="subnav">
     <div class="cisa"><img src="./css/images/2560px-Flag_of_the_United_States.svg.png" alt=""></div>
-    <p>An official website of American Governmnet & Cybersecurity Agencies</p>
-    <div class="cisa"> <img src="./css/images/download.png" alt=""></div>
+    <p>An official media of the United states Cybersecurity Agencies</p>
+    <div class="cisa"> <img src="" alt=""></div>
   </div>
 
   <nav>
