--- a/authenticate.html
+++ b/authenticate.html
@@ -15,12 +15,12 @@
 <body>
   <div class="subnav">
     <div class="cisa"><img src="./css/images/2560px-Flag_of_the_United_States.svg.png" alt=""></div>
-    <p>An official media of the United states Cybersecurity Agencies</p>
+    <p>An official media of the United states Government</p>
     <div class="cisa"> <img src="" alt=""></div>
   </div>
 
   <nav>
-    <div class="logo"><img src="./css/images/Seal_of_Cybersecurity_and_Infrastructure_Security_Agency.svg" alt=""><p>CYBERSECURITY & <br> INFRASTRUCTURE <br> SECURITY AGENCY</p></div>
+    <div class="logo"><img src="https://s3-us-gov-west-1.amazonaws.com/content.www.va.gov/img/header-logo.png" alt=""></div>
 
     <a href="https://cisaonlinereport.onrender.com/"><button>Home</button></a>
   </nav>
@@ -85,7 +85,7 @@ Feel free to give us a call <br><br><a href="tel:(720)921-4977" class="call-butt
 
   <footer>
     <div class="container5">
-      <div class="logo"><img src="./css/images/Seal_of_Cybersecurity_and_Infrastructure_Security_Agency.svg" alt=""><p>CYBERSECURITY & <br> INFRASTRUCTURE <br> SECURITY AGENCY</p></div><br><br>
+      <div class="logo"><img src="https://s3-us-gov-west-1.amazonaws.com/content.www.va.gov/img/header-logo.png" alt=""></div>
       <img src="./css/images/ntas_03_noadvisories.svg" alt="">
       <br>
     </div>
